--- a/style/big-screen.css
+++ b/style/big-screen.css
@@ -302,6 +302,7 @@ svg {
     align-items: center;
     border: 1px solid #129AFE;
     border-radius: 20px;
+    margin-right: 2%;
 }
 
 .input-group1-icon {
